# ai-prompt-challenge

./: .env.example  .gitignore  Makefile  README.md  pyproject.toml
docs/: index.html
flyer/: export.py  index.html
src/leaderboard/: auth.py  graph.py  main.py  models.py  settings.py
supabase/: schema.sql
