[project]
name = "ai-prompt-challenge"
version = "0.1.0"
description = "Leaderboard tracker for the AI Prompt Challenge via Microsoft Teams"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "msal>=1.28.0",
    "httpx>=0.27.0",
    "pydantic>=2.7.0",
    "pydantic-settings>=2.3.0",
    "rich>=13.7.0",
    "playwright>=1.44.0",
]

[project.scripts]
leaderboard = "leaderboard.main:run"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/leaderboard"]

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.mypy]
python_version = "3.11"
strict = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
p